<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General -->
    <string name="app_name">Frozen LED</string>
    <string name="service_name">Frozen LED Service</string>
    <string name="empty_list">This looks empty. Try adding something using the + button above.</string>
    <string name="dialog_firsttime">For this app to work, you must allow it to access your notifications. You can find
    this option at your Device\'s Settings > Security > Notifications.\n Do you want to be taken there now?</string>
    <string name="dialog_welcome">Welcome</string>
    <string name="error_find_activity">Could not automatically launch activity.</string>
    <!-- Navigation -->
    <string name="title_sectionApps">Apps</string>
    <string name="title_sectionNames">Text &amp; Names</string>
    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_about">About</string>
    <string name="menu_confirm">Done</string>
    <string name="menu_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="menu_test">Test</string>
    <!-- Add activity -->
    <string name="activity_add">Add</string>
    <string name="by_app">By application</string>
    <string name="by_name">By name</string>
    <string name="dialog_pickapp_title">Select application</string>
    <string name="no_selection">No app selected</string>
    <string name="pulse_speed">Pulse speed</string>
    <string name="pulse_help">Delay between pulses. Set a bigger number for a bigger delay. Setting
        this to 0MS will prevent the LED from blinking.
    </string>
    <string name="test_dialog">Turn off the screen to preview your settings.\nWhen you are finished, dismiss this dialog.</string>
    <!-- Delete dialog -->
    <string name="dialog_sure">Are you sure?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <!-- Edit activity dialog -->
    <string name="activity_edit">Edit</string>
    <string name="menu_save">Save</string>
    <!-- About activity -->
    <string name="apptitle">Frozen LED v1.2.1</string>
    <string name="author">By Thanasis Georgiou</string>
    <string name="library">Using the ColorPicker library by Lars Werkman available under the Apache License v2. \nhttps://github.com/LarsWerkman/HoloColorPicker</string>
    <string name="contact_me">Contact me</string>
    <string name="github">Find me on github</string>
    <!-- Preferences -->
    <string name="pref_cat_missedcalls">Missed Calls</string>
    <string name="pref_missedcalls_handle">Handle missed calls</string>
    <string name="pref_missedcalls_handle_desc">Light the LED after a call is missed</string>
    <string name="pref_missedcalls_color">LED Color</string>
    <string name="pref_missedcalls_pulse">Pulse speed</string>
    <string name="pref_cat_notif">Notifications</string>
    <string name="pref_notif_priority">Minimum priority</string>
    <string name="pref_notif_priority_desc">Any notifications with priority below the selected priority will be ignored.</string>
    <string-array name="pref_notif_priority_list">
        <item>Max</item>
        <item>High</item>
        <item>Default</item>
        <item>Low</item>
        <item>Min (Not recommended)</item>
    </string-array>
    <string-array name="pref_notif_priority_values">
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
    </string-array>
    <string name="pref_notif_ongoing">Ignore ongoing notifications</string>
    <string name="pref_notif_ongoing_desc">If checked, ongoing notifications (for example, music players or chat heads) will be ignored.</string>
    <string name="pref_cat_security">Security</string>
    <string name="pref_security_access">Notification Access</string>
    <string name="pref_security_access_desc">The app must be allowed here in order to function.</string>
    <!-- Seekbar Preference -->
    <string name="pulse_pref_help">Set to 0ms for solid on LED.</string>
</resources>
