<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="8dp"
              android:paddingTop="8dp"
              android:paddingRight="8dp">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:src="@drawable/web_hi_res_512"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/apptitle"
            android:id="@+id/textView"
            android:layout_gravity="left|center_vertical"
            android:gravity="center"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/author"
            android:id="@+id/textView2"
            android:layout_gravity="left|center_vertical"
            android:gravity="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:text="@string/library"
            android:id="@+id/textView3"
            android:layout_gravity="center"
            android:gravity="center"/>

</LinearLayout>